# frouros

./: .codecov.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  code_coverage.yml  documentation.yml  publish.yml
docs/: Makefile
docs/source/: api_reference.md  concepts.md  conf.py  examples.md  faq.md  get_started.md  index.md  installation.md  references.bib
docs/source/_templates/: class.md  function.md
docs/source/api_reference/: callbacks.md  datasets.md  detectors.md  metrics.md  semi_supervised.md  supervised.md  transformations.md  unsupervised.md  utils.md
docs/source/api_reference/callbacks/: batch.md  streaming.md
docs/source/api_reference/datasets/: real.md  synthetic.md
docs/source/api_reference/detectors/: concept_drift.md  data_drift.md
docs/source/api_reference/utils/: checks.md  data_structures.md  kernels.md  persistence.md  stats.md
docs/source/examples/: concept_drift.md  data_drift.md  utils.md
docs/source/examples/concept_drift/: DDM_NormalMode.ipynb  DDM_advance.ipynb  DDM_simple.ipynb
docs/source/examples/data_drift/: MMD_advance.ipynb  MMD_simple.ipynb  multivariate_detector.ipynb  multivariate_pipeline.ipynb  parallel_pipeline.ipynb  univariate_detector.ipynb  univariate_pipeline.ipynb
docs/source/examples/supervised/: DDM_NormalMode.ipynb  DDM_simple.ipynb
docs/source/examples/unsupervised/: MMD_simple.ipynb  multivariate_pipeline.ipynb  univariate_pipeline.ipynb
docs/source/examples/utils/: save_load.ipynb
examples/unsupervised/: MMD_simple.ipynb
frouros/: __init__.py
frouros/callbacks/: __init__.py  base.py  callback.py
frouros/callbacks/batch/: __init__.py  base.py  permutation_test.py  reset.py  reset_drift.py
frouros/callbacks/streaming/: __init__.py  base.py  history.py  msprt.py  warning_samples.py
frouros/common/: __init__.py  exceptions.py  update.py
frouros/concept_drift/: __init__.py  base.py  utils.py
frouros/concept_drift/cusum_based/: base.py  cusum.py  geometric_moving_average.py  page_hinkley.py
frouros/concept_drift/ddm_based/: base.py  ddm.py  ecdd.py  eddm.py  hddm.py  rddm.py  stepd.py
frouros/concept_drift/window_based/: adwin.py  base.py  kswin.py
frouros/data_drift/: base.py  utils.py
frouros/data_drift/batch/: __init__.py  base.py
frouros/data_drift/batch/distance_based/: __init__.py  base.py  bhattacharyya.py  bhattacharyya_distance.py  emd.py  hellinger.py  hellinger_distance.py  histogram_intersection.py  js.py  kl.py  mmd.py  psi.py
frouros/data_drift/batch/statistical_test/: __init__.py  base.py  chisquare.py  cvm.py  ks.py  welch_t_test.py
frouros/datasets/: __init__.py  base.py  exceptions.py  real.py  synthetic.py
frouros/datasets/tests/: __init__.py  conftest.py  test_real.py
frouros/detectors/: __init__.py  base.py
frouros/detectors/concept_drift/: __init__.py  base.py  exceptions.py
frouros/detectors/concept_drift/cusum_based/: base.py  cusum.py  geometric_moving_average.py  page_hinkley.py
frouros/detectors/concept_drift/ddm_based/: base.py  ddm.py  ecdd.py  eddm.py  hddm.py  rddm.py  stepd.py
frouros/detectors/concept_drift/streaming/: __init__.py  base.py
frouros/detectors/concept_drift/window_based/: adwin.py  base.py  kswin.py
frouros/detectors/data_drift/: __init__.py  base.py  exceptions.py
frouros/detectors/data_drift/batch/: __init__.py  base.py
frouros/detectors/data_drift/streaming/: __init__.py  base.py
frouros/metrics/: __init__.py  base.py  prequential_error.py
frouros/metrics/prequential_error/: __init__.py  base.py  fading_factor.py  prequential_error.py
frouros/metrics/tests/: conftest.py  test_prequential_error.py
frouros/semi_supervised/: __init__.py  base.py
frouros/semi_supervised/margin_density_based/: __init__.py  base.py  md3.py
frouros/supervised/: __init__.py  base.py  ddm.py  exceptions.py  modes.py  utils.py
frouros/supervised/cusum_based/: __init__.py  base.py  cusum.py  geometric_moving_average.py  page_hinkley.py
frouros/supervised/cusum_test/: __init__.py  base.py  page_hinkley.py
frouros/supervised/ddm_based/: __init__.py  base.py  ddm.py  ecdd.py  eddm.py  hddm.py  modes.py  rddm.py  stepd.py
frouros/supervised/statistical_test/: __init__.py  base.py  stepd.py
frouros/supervised/tests/: __init__.py  conftest.py  test_ddm.py  test_supervised.py
frouros/supervised/window_based/: __init__.py  adwin.py  base.py  kswin.py
frouros/tests/: __init__.py  conftest.py  test_callback.py  test_concept_drift.py  test_data_drift.py  test_prequential_error.py  test_semi_supervised.py  test_supervised.py  test_transformations.py  test_unsupervised.py
frouros/tests/integration/: __init__.py  test_callback.py  test_change_detection.py  test_concept_drift.py  test_data_drift.py  test_real.py  test_synthetic.py
frouros/tests/unit/: __init__.py
frouros/tests/unit/detectors/: __init__.py
frouros/tests/unit/metrics/: __init__.py  test_prequential_error.py
frouros/tests/unit/utils/: test_checks.py  test_kernels.py  test_persistence.py  test_stats.py
frouros/transformations/: __init__.py  parallel_detectors.py
frouros/transformations/detectors/: __init__.py  base.py  categorical.py  numerical.py
frouros/unsupervised/: __init__.py  base.py  cvm.py  exceptions.py  ks.py  utils.py
frouros/unsupervised/distance_based/: __init__.py  base.py  emd.py  histogram_intersection.py  js.py  kl.py  mmd.py  psi.py
frouros/unsupervised/statistical_test/: __init__.py  base.py  chisquare.py  chisquared.py  cvm.py  exceptions.py  ks.py  t_test.py  welch_t_test.py
frouros/unsupervised/tests/: __init__.py  conftest.py  test_ks.py  test_statistical_test.py  test_unsupervised.py
frouros/utils/: __init__.py  checks.py  data_structures.py  decorators.py  kernels.py  logger.py  persistence.py  stats.py  validation.py
(+70 files in other folders)
