[project]
name = "frouros"
version = "0.9.0"
description = "An open-source Python library for drift detection in machine learning systems"
authors = [
    {name = "Jaime Céspedes Sisniega", email = "cespedes@ifca.unican.es"}
]
maintainers = [
    {name = "Jaime Céspedes Sisniega", email = "cespedes@ifca.unican.es"}
]
license = {text = "BSD-3-Clause"}
readme = "README.md"
keywords = [
    "drift-detection",
    "concept-drift",
    "data-drift",
    "machine-learning",
    "data-science",
    "machine-learning-operations",
    "machine-learning-systems",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "matplotlib>=3.8.2,<3.10",
    "numpy>=1.26.3,<2.2",
    "requests>=2.31.0,<2.33",
    "scipy>=1.12.0,<1.15",
    "tqdm>=4.66.1,<5.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.2.6,<8.2",
    "sphinx-book-theme>=1.1.0,<1.2",
    "sphinxcontrib-bibtex>=2.6.2,<2.7",
    "myst-parser>=2.0.0,<4.1",
    "myst-nb>=1.0.0,<1.2",
]
notebooks = [
    "scikit-learn>=1.3.2,<1.6",
    "torch>=2.1.2,<2.6",
    "torchvision>=0.16.2,<0.22",
    "ipywidgets>=8.1.1,<8.2",
]

[project.urls]
homepage = "https://frouros.readthedocs.io"
repository = "https://github.com/IFCA-Advanced-Computing/frouros"
documentation = "https://frouros.readthedocs.io"
download = "https://pypi.org/project/frouros/"

[build-system]
requires = [
    "setuptools>=61.0,<76.0",
    "wheel>=0.42.0,<0.46",
    "toml>=0.10.2,<0.11",
    "build>=1.0.3,<1.3",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "B",  # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",  # isort
]

[tool.mypy]
disable_error_code = [
    "misc",
    "no-any-return",
]
ignore_missing_imports = true
strict = true
